@@ -38,3 +38,5 @@
 2016-11-25 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'RmlPort=' and 'CunctatorPort=' directives to the [Global]
 	section of lwnetrouter.conf(5).
+2016-11-25 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed fencepost errors in 'src/lwnetrouterd/protocol_cunc.cpp'.
